# v3d_external

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE  README  build.bat  build.cmake  build.hudson  build.linux  build.macx  build.wsl  build_VS2008.cmake  build_VS2010.cmake  build_VS2012.cmake  build_VS2013.cmake  build_VS2015.cmake  build_mingw.bat  build_msvc.bat  hudson_build.bat  mainwindow.cpp  nmake_release.bat  pullall.bat  qmake.bat  renderer_obj.cpp  v3d.config  v3d.files  v3d.includes
2010_hackathon/ITK-V3D-Plugins/: CMakeLists.txt
doc/api/: CMakeLists.txt  Doxyfile.in
released_plugins/: CMakeLists.txt  README  build_plugindemo.bat  build_plugindemo.sh  build_plugindemo_msvc.bat  hudson_build_plugindemo_msvc.bat
released_plugins/CMake/: PluginConfiguration.cmake
released_plugins/basic_c_fun/: basic_4dimage.h  basic_landmark.h  basic_surf_objs.h  color_xyz.h  v3d_basicdatatype.h  v3d_global_preference.h  v3d_interface.h  v3d_message.cpp
released_plugins/special_v3d_plugins/: CMakeLists.txt
released_plugins/v3d_plugins/: CMakeLists.txt
v3d_main/: CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  LICENSE  README.howtobuild  README_and_LICENSE  build.bat  build.linux  build.macx  build.msys  build.redhat  build.test  build.ubuntu  build.wsl  build_mingw.bat  build_qt5.wsl  change_log_v3d  how_to_build_v3d_win32_msvc.txt  hudson_build.bat  mingw.bat  old_build.macx  old_build.ubuntu
v3d_main/3drenderer/: 3drenderer.pro  3drenderer.qrc  CMakeLists.txt  GLee2glew.c  GLee2glew.h  GLee_r.c  GLee_r.h  ItemEditor.cpp  ItemEditor.h  README.txt  Renderer_gl2.cpp  Renderer_gl2.h  barFigureDialog.cpp  barFigureDialog.h  fastmarching_linker.h  freeglut_geometry_r.c  glsl_r.cpp  glsl_r.h  gradients.cpp  gradients.h  hoverpoints.cpp  hoverpoints.h  line_box_intersection_check.h  marchingcubes.cpp  marchingcubes.h  nstroke.cpp  nstroke_tracing.cpp  qtr_widget.h  renderer.cpp  renderer.h  renderer_gl1.h  renderer_gl2.cpp  renderer_gl2.h  renderer_hit.cpp  renderer_hit2.cpp  renderer_labelfield.cpp  renderer_obj.cpp  renderer_obj2.cpp  renderer_tex.cpp  renderer_tex2.cpp  (+21 more)
v3d_main/CMake/: CPack.STGZ_Header.sh.in  FindIconv.cmake  FindNEWMAT.cmake
v3d_main/V3d_Build/: mocinclude.opt
v3d_main/V3d_Qt6_Build/: .qmake.stash
v3d_main/basic_c_fun/: CMakeLists.txt  INeuronAssembler.h  IPMain4NeuronAssembler.h  basic_4dimage.cpp  basic_4dimage.h  basic_4dimage_create.cpp  basic_landmark.h  basic_surf_objs.cpp  basic_surf_objs.h  basic_thread.h  basic_triview.h  basic_view3d.h  c_array_struct.hpp  color_xyz.h  imageio_mylib.cpp  imageio_mylib.h  img_definition.h  mg_image_lib.cpp  mg_image_lib.h  mg_utilities.cpp  mg_utilities.h  stackutil.cpp  stackutil.h  v3d_basicdatatype.h  v3d_curvetracepara.h  v3d_global_preference.h  v3d_interface.h  v3d_message.cpp  v3d_message.h  vcdiff.cpp  vcdiff.h  volimg_proc.h  volimg_proc_declare.h
v3d_main/build-v3d_qt6-Qt_6_1_3_for_macOS-Debug/: ui_dialog_update_checking.h  ui_dialog_update_downloading.h  ui_dialog_url_entry.h  ui_landmark_property.h
v3d_main/build-v3d_qt6-Qt_6_1_3_for_macOS-Release/: ui_dialog_curve_trace.h  ui_dialog_imagecrop_bbox.h  ui_dialog_imageresample.h  ui_dialog_keypoint_features.h  ui_dialog_maskroi.h  ui_dialog_pointcloudatlas_linkerloader.h  ui_dialog_update_list.h  ui_dialog_update_options.h  ui_dialog_update_v3d.h  ui_dialog_vano_linkerloader.h  ui_import_filelist_dialog.h  ui_import_images_tool.h  ui_setVoxSize.h  ui_surface_obj_annotation.h  ui_surfaceobj_geometry_dialog.h  ui_template_matching_cellseg.h  ui_v3d_global_preference.h
v3d_main/build-vaa3d_msvc-unknown-Release/: SecondSWC  customMessageLog.txt  firstSWC
v3d_main/cell_counter/: CellCounter3D.cpp  CellCounter3D.h
v3d_main/cellseg/: CMakeLists.txt  FL_accessory.h  FL_adaptiveThreshold3D.h  FL_bwdist.h  FL_bwlabel2D3D.h  FL_cellSegmentation3D.h  FL_coordDefinition.h  FL_defType.h  FL_distanceTransform3D.h  FL_downSample3D.h  FL_filter3D.h  FL_gvfCellSeg.h  FL_interpolateCoordCubic3D.h  FL_interpolateCoordLinear3D.h  FL_main_brainseg.h  FL_morphology.h  FL_neighborhood.h  FL_neighborhoodWalker.h  FL_queue.h  FL_regionProps.h  FL_sort.h  FL_sort2.h  FL_threshold.h  FL_unionFind.h  FL_upSample3D.h  FL_volimgProcLib.h  FL_watershed_vs.h  bwlabel.h  nrutil.h  seg_parameter.h  template_matching_seg.cpp  template_matching_seg.h  test.h
v3d_main/cmake_installer/: CMakeLists.txt
v3d_main/common_lib/: CMakeLists.txt  MinGW编译vaa3d主要流程md  README  demo_shared.lib  fftw-3.3.4-dll32.tgz  fftw-3.3.4-dll64.tgz  newmat11d.lib
v3d_main/custom_toolbar/: todo  v3d_custom_toolbar.cpp  v3d_custom_toolbar.h
v3d_main/eegdevice/: eegdevice.cpp  eegdevice.h
v3d_main/gmm/: fit_gmm.cpp  fit_gmm.h
v3d_main/graph/: CMakeLists.txt  dijk.cpp  dijk.h  elementmexheader.h  graph.h  graph_basic.h
v3d_main/imaging/: CMakeLists.txt  v3d_imaging.cpp  v3d_imaging.h
v3d_main/io/: asc_to_swc.cpp  asc_to_swc.h  io_bioformats.cpp  io_bioformats.h  nrrd.cpp  nrrd.h  v3d_nrrd.cpp  v3d_nrrd.h
v3d_main/issues/: bug_list.txt  how_to_build.txt  issuesolve_msg_qmakespec_unset.txt  qt_version_comments.txt  some_other_old_issues.txt  v3d_32bit_compile.txt  v3d_64bit_compile.txt
v3d_main/jba/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  README_jba  cmake_install.cmake
v3d_main/mozak/: CHANGELOG.txt  DS4_profile.xml  MOZAK-CONTROLLERS-HELP.txt  Mozak3DView.cpp  Mozak3DView.h  MozakUI.cpp  MozakUI.h  PS4 controller.ahk  PS4 controller.txt  mozak.qrc  mozak_installer.iss
v3d_main/multithreadimageIO/: CMakeLists.txt  v3d_multithreadimageIO.cpp  v3d_multithreadimageIO.h
v3d_main/neuron_annotator/: AnnotationSession.cpp  AnnotationSession.h  BrightnessCalibrator.cpp  BrightnessCalibrator.h  CMakeLists.txt  CameraModel.cpp  CameraModel.h  CellCounter3D.cpp  CellCounter3D.h  ColorSeparatorConsolidator.cpp  ColorSeparatorConsolidator.h  DataFlowModel.cpp  DataFlowModel.h  ExportFile.cpp  ExportFile.h  FragmentSelectionModel.cpp  FragmentSelectionModel.h  GalleryButton.cpp  GalleryButton.h  GammaWidget.cpp  GammaWidget.h  GammaWidget.ui  ImageColorizer.h  (+37 more)
(+29974 files in other folders)
